Partially finished assignment

--- a/app/public/survey.html
+++ b/app/public/survey.html
@@ -142,10 +142,9 @@
         <br>
 
         <!-- Submit Button -->
-        <a href="/api/friends">
             <button type="submit" class="btn btn-primary btn-lg btn-block" id="submit"><i class="fa fa-check-circle"
                     aria-hidden="true"></i>
-                Submit</button></a>
+                Submit</button>
         <br>
         <div>
             <a href="/api/friends">
