--- a/app/public/survey.html
+++ b/app/public/survey.html
@@ -6,8 +6,11 @@
     <title>Friend Finder Survey</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
     <link rel="stylesheet" href="style.css">
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-</head>
+    <script
+  src="https://code.jquery.com/jquery-3.3.1.min.js"
+  integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
+  crossorigin="anonymous"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script></head>
 
 <body>
     <div class="container">
@@ -104,6 +107,7 @@
                 <option value="5">5 (Strongly Agree)</option>
             </select>
 
+
         <h3><strong>Question 8</strong></h3>
         <h4>You rarely get carried away by fantasies and ideas.</h4>
         <select class="form-control" id="q8">
@@ -142,8 +146,8 @@
         <br>
 
         <!-- Submit Button -->
-            <button type="submit" class="btn btn-primary btn-lg btn-block" id="submit"><i class="fa fa-check-circle"
-                    aria-hidden="true"></i>
+            <button type="submit" data-target="#results-odal" class="btn btn-primary btn-lg btn-block" id="submit"><i class="fa fa-check-circle"
+                    ></i>
                 Submit</button>
         <br>
         <div>
@@ -160,14 +164,13 @@
     </div>
 
     <!-- Modal -->
-    <div id="results-modal" class="modal fade" role="dialog">
+    <div id="results-modal" class="modal" role="dialog">
         <div class="modal-dialog">
 
             <!-- Modal content-->
             <div class="modal-content">
                 <div class="modal-header">
-                    <button type="button" class="close" data-dismiss="modal">×</button>
-                    <h2 class="modal-title"><strong>Best Match</strong></h2>
+                     <h2 class="modal-title"><strong>Best Match</strong></h2>
                 </div>
                 <div class="modal-body">
                     <h2 id="match-name"></h2>
@@ -184,18 +187,11 @@
         // Capture the form inputs
         $("#submit").on("click", function (event) {
             event.preventDefault();
-
+            console.log("Here");
             // Form validation
             function validateForm() {
                 var isValid = true;
                 $(".form-control").each(function () {
-                    if ($(this).val() === "") {
-                        isValid = false;
-                    }
-                });
-
-                $(".chosen-select").each(function () {
-
                     if ($(this).val() === "") {
                         isValid = false;
                     }
@@ -225,7 +221,6 @@
 
                 // AJAX post the data to the friends API.
                 $.post("/api/friends", userData, function (data) {
-                    console.log(data);
                     // Grab the result from the AJAX post so that the best match's name and photo are displayed.
                     $("#match-name").text(data.name);
                     $("#match-img").attr("src", data.photo);
